--- a/plane-db/public/global.css
+++ b/plane-db/public/global.css
@@ -2,10 +2,11 @@ html, body {
 	position: relative;
 	width: 100%;
 	height: 100%;
+	background-color: #272D2D;
+	color:#f9f8e9;
 }
 
 body {
-	color: #333;
 	margin: 0;
 	padding: 8px;
 	box-sizing: border-box;
@@ -60,4 +61,36 @@ button:not(:disabled):active {
 
 button:focus {
 	border-color: #666;
+}
+
+h1 {
+	text-align:center;
+	font-size:7vw;
+}
+
+.header {
+	overflow-x:visible;
+	width:100%;
+	margin:0px;
+	padding:0px;
+}
+
+#search {
+	text-align: center;
+	width:auto;
+	height:10vh;
+	font-size:3vh;
+}
+
+.search {
+	text-align: center;
+}
+
+th, td {
+    border: 1px solid #f4f4f4;
+	padding:1.5em;
+	font-size:2vh;
+}
+table {
+	margin:5vw;
 }
